tdf#147503 don't use SfxObjectShellLock for new xml forms document

because in the hidden case the document is unexpectedly closed on
leaving NewXForms

Change-Id: I00ea0b8de6c10ff141584cefe3768b7071138393
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150891
Tested-by: Jenkins
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>