cui/source/dialogs/hldocntp.cxx
@@ -287,7 +287,6 @@ IMPL_STATIC_LINK(SvxHyperlinkNewDocTp, DispatchDocument, void*, p, void)
             {
                 SfxStringItem aNewName( SID_FILE_NAME, xExecuteInfo->aURL.GetMainURL( INetURLObject::DecodeMechanism::NONE ) );
                 SfxUnoFrameItem aDocFrame( SID_FILLFRAME, pViewFrame->GetFrame().GetFrameInterface() );
-                fprintf(stderr, "is there a frame int %p\n", pViewFrame->GetFrame().GetFrameInterface().get() );
                 pViewFrame->GetDispatcher()->ExecuteList(
                     SID_SAVEASDOC, SfxCallMode::SYNCHRON,
                     { &aNewName }, { &aDocFrame });
